# Grove

./: .gitignore  README.md  data_ideas.md  package-lock.json
grove-backend/: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  micronaut-cli.yml  pyproject.toml  settings.gradle
grove-backend/backend/: settings.py  urls.py
grove-backend/challenge/: models.py  serializers.py  urls.py  views.py
grove-backend/challenge/migrations/: 0001_initial.py
grove-backend/groves/: apps.py  models.py  serializers.py  urls.py  views.py
grove-backend/groves/migrations/: 0001_initial.py
grove-backend/notifications/: models.py  serializers.py  urls.py  views.py
grove-backend/notifications/migrations/: 0001_initial.py
grove-backend/quests/: models.py  urls.py  views.py
grove-backend/quests/migrations/: 0001_initial.py  0002_alter_quest_exp.py
grove-backend/requests/: apps.py  models.py  serializers.py  urls.py  views.py
grove-backend/src/main/kotlin/io/grove/: Application.kt  AuthenticationProviderUserPassword.kt  HomeController.kt  LoginAuthController.kt  UserController.kt  UserRepository.kt  UserUpdateCommand.kt
grove-backend/src/main/resources/: application.yml
grove-backend/src/main/resources/db/migration/: V1__schema.sql
grove-backend/src/main/resources/views/: home.vm
grove-backend/src/test/kotlin/io/grove/: AppClient.kt  GroveBackendTest.kt  JwtAuthenticationTest.kt  UserControllerTest.kt
grove-backend/users/: models.py  serializers.py  urls.py  views.py
grove-backend/users/migrations/: 0001_initial.py  0002_user_status.py
(+17 files in other folders)
