[tool.poetry]
name = "grove-backend"
version = "0.1.0"
description = ""
authors = ["Jackson <jrmoffet@gmail.com>"]
readme = "README.md"
packages = [{include = "grove_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
