[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jackson <jrmoffet@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
